Use flex for footer. Fix overlapping content

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,23 +1,27 @@
 .divMain {
   display: flex;
+  flex-direction: row;
+  flex: auto;
+  overflow: auto;
 }
   
 .divColumn1 {
-  flex: 50%;
+  flex: auto;
   padding: 5px 2.5px 5px 5px;
 }
   
 .divColumn2 {
-  flex: 50%;
+  flex: auto;
   padding: 5px 5px 5px 2.5px;
 }
 
-.footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   text-align: center;
-   padding: 10px;
-   background-color: white;
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  padding: 10px;
+  text-align: center;
+  flex: none;
 }
